--- a/playstation.html
+++ b/playstation.html
@@ -55,7 +55,7 @@
 		.parallax4
 		{
 			/* The image used */
-			background-image: url('file:///home/mrbcut/Desktop/web_dev/portfolio/sony/BCutkelvin_PlayStation3_QAAnalyst.jpg');
+			background-image: url('***/BCutkelvin_PlayStation3_QAAnalyst.jpg');
 
 			/* Full height */
 			height: 100%;
